     to `ELASTIC_APM_SERVICE_NAME`.
 ** `app_name` arguments to API calls in the whole code base changed to `service_name`.
 ** `context.request.url.raw` has been renamed to `context.request.url.full` ({pull}121[#121])
 * BREAKING: added `elasticapm.set_custom_context` in favor of the more generic `set_custom_data` function ({pull}133[#133])

[[release-1.0.0]]
[float]
=== v1.0.0
https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev3\...v1.0.0[Check the HEAD diff]

 * added `max-event-queue-length` setting. ({pull}67[#67])
 * changed name that the agent reports itself with to the APM server from `elasticapm-python` to `python`. This aligns the Python agent with other languages. ({pull}104[#104])
 * changed Celery integration to store the task state (e.g. `SUCCESS` or `FAILURE`) in `transaction.result` ({pull}100[#100])
 * added setting to disable SSL certificate verification ({pull}108[#108])
 * BREAKING: renamed `server` configuration variable to `server_url` to better align with other language agents ({pull}105[#105]) 
 * BREAKING: removed the old and unused urllib2-based HTTP transport, and renamed the urllib3 transport ({pull}107[#107])
 * BREAKING: several API changes to `capture_exception`, `capture_message`, and added documentation for these and other APIs ({pull}112[#112])

[[release-v1.0.0.dev3]]
[float]
=== v1.0.0.dev3

https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev2\...v1.0.0.dev2[Check the diff]


 * added a background thread to process the transactions queue every 60 seconds (configurable) ({pull}68[#68])
 * adapted trace context for SQL traces to new API ({pull}77[#77])
 * ensured that transaction data is also passed through processors ({pull}84[#84])
 * added `uninstrument` function to reverse instrumentation,
   and exposed both `instrument` and `uninstrument` as public API in the `elasticapm` namespace  ({pull}90[#90])